Diet Example - Pyomo

--- a/DIET-PYOMO.ipynb
+++ b/DIET-PYOMO.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -69,11 +69,11 @@
     "model.c = Param(model.F, within = PositiveReals, doc = 'in $')\n",
     "\n",
     "# Amount of nutrient\n",
-    "model.a    = Param(model.F, model.N, within = NonNegativeReals)\n",
+    "model.a    = Param(model.F, model.N, within = NonNegativeReals, doc = 'units in .py')\n",
     "\n",
     "# Max and Min for each Nutrient\n",
-    "model.Nmin = Param(model.N, within = NonNegativeReals, default = 0.0)\n",
-    "model.Nmax = Param(model.N, within = NonNegativeReals, default = infinity)\n",
+    "model.Nmin = Param(model.N, within = NonNegativeReals, default = 0.0, doc = 'En una comida ')\n",
+    "model.Nmax = Param(model.N, within = NonNegativeReals, default = infinity, doc = 'Todo el dia')\n",
     "\n",
     "\n",
     "# Number of servings\n",
@@ -81,19 +81,19 @@
     "\n",
     "# Minimize z(cost)\n",
     "def cost(model):\n",
-    "    return sum(model.c[i]*model.x[i] for i in model.F)\n",
+    "    return sum(model.c[i] * model.x[i] for i in model.F)\n",
     "model.cost = Objective(rule=cost)\n",
     "\n",
     "# LIMITS\n",
     "\n",
     "#Max\n",
     "def nutrients_max(model, j):\n",
-    "    value = sum(model.a[i,j]*model.x[i] for i in model.F)\n",
+    "    value = sum(model.a[i,j] * model.x[i] for i in model.F)\n",
     "    return value <= model.Nmax[j]\n",
     "model.nutrient_limit_max = Constraint(model.N, rule=nutrients_max)\n",
     "#Min\n",
     "def nutrient_min(model, j):\n",
-    "    value = sum(model.a[i,j]*model.x[i] for i in model.F)\n",
+    "    value = sum(model.a[i,j] * model.x[i] for i in model.F)\n",
     "    return model.Nmin[j] <= value \n",
     "model.nutrient_limit_min = Constraint(model.N, rule=nutrient_min)\n",
     "\n",
